--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -98,30 +98,19 @@ stages:
 
 
 
-    # --- 3. Copiar archivos para despliegue ---
-
+     # --- 3. Copiar archivos para despliegue ---
     - task: CopyFiles@2
-
       displayName: 'Copiar Código de Aplicación'
-
       inputs:
-
         SourceFolder: '$(Build.SourcesDirectory)'
-
         Contents: |
-
-          sgt/**
-
-          requirements.txt
-
-          test_deployment.py
-
+          sgt/** # Tu código fuente, incluyendo main.py
+          requirements.txt     # CRÍTICO: Para instalar dependencias en Azure
+          templates/** # CRÍTICO: Templates en la raíz
+          reportes/** # Carpeta de reportes (si existe)
         TargetFolder: '$(DeploymentPath)'
 
-
-
     # --- 4. Publicar artefactos ---
-
     - task: PublishBuildArtifacts@1
 
       displayName: 'Publicar Artefacto de Despliegue'
