--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,13 +70,9 @@ stages:
           start.sh # 🛠️ Nuevo script de inicio
         TargetFolder: '$(DeploymentPath)'
 
-    # 🛠️ CORRECCIÓN FINAL: Asignar permisos de ejecución al script
-    # Se usa la tarea 'bash' para forzar el uso de un intérprete compatible con 'chmod'.
-    - bash: |
-        echo "Dando permisos de ejecución a start.sh"
-        chmod +x "$(DeploymentPath)/start.sh"
-      displayName: 'Asignar Permisos a start.sh'
-
+    # 🛑 ELIMINADA: La tarea de permisos falló por falta de Bash en el agente local. 
+    # Confiamos en que Azure ejecute 'bash start.sh' directamente.
+    
 
     # --- 4. Publicar artefactos ---
     - task: PublishPipelineArtifact@1 
